# modaic-antm

./: .gitignore  QUICKSTART.md  README.md  README_USAGE.md  SYSTEM_SUMMARY.md  main.py  pyproject.toml  test_rag.py
db/: lancedb.py
embed/: ingest_data.py  utils.py
questions/: answers.csv  round-1-questions.md  round-2-questions.md  training-questions.md
retrieve/: modules.py  utils.py
