[project]
name = "modaic-antm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.4",
    "lancedb>=0.25.3",
    "markitdown[all]>=0.1.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.66.0",
]
